# decyclify

./: .coveragerc  README.md  pytest.ini  setup.cfg  setup.py
.github/workflows/: main.yml
decyclify/: __init__.py  functions.py  node_iterators.py
decyclify/tests/: test_functions.py
tests/: conftest.py  test_functions.py  test_node_iterators.py
