# Copyright 2020 Bruno P. Kinoshita
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[metadata]
author = Bruno P. Kinoshita
author_email = brunodepaulak@yahoo.com.br
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Atmospheric Science
description = Graph decyclify algorithm implementation as in Sandnes & Sinnen paper (2004) in Python
keywords =
    algorithms
    cyclic
    graph
    graph-theory
license = Apache License 2.0
license_file = LICENSE
name = decyclify
platforms = any
python_requires = >=3.7
setup_requires = pytest-runner==5.2
url = https://github.com/kinow/decyclify

[aliases]
# so that running python setup.py test invokes pytest
test = pytest
